# apps/backend/src/api/admin/storefront-settings/route.ts
@@ -1,0 +1,31 @@
+import type {
+  AuthenticatedMedusaRequest,
+  MedusaResponse,
+} from "@medusajs/framework/http";
+
+import type { AdminUpdateStorefrontSettingsType } from "../../middlewares";
+import { STOREFRONT_SETTINGS_MODULE } from "../../../modules/storefront-settings";
+import type StorefrontSettingsModuleService from "../../../modules/storefront-settings/service";
+import { updateStorefrontSettingsWorkflow } from "../../../workflows/update-storefront-settings";
+
+export const GET = async (
+  req: AuthenticatedMedusaRequest,
+  res: MedusaResponse,
+) => {
+  const service: StorefrontSettingsModuleService = req.scope.resolve(
+    STOREFRONT_SETTINGS_MODULE,
+  );
+
+  res.json({ settings: await service.retrieveSettings() });
+};
+
+export const POST = async (
+  req: AuthenticatedMedusaRequest<AdminUpdateStorefrontSettingsType>,
+  res: MedusaResponse,
+) => {
+  const { result } = await updateStorefrontSettingsWorkflow(req.scope).run({
+    input: req.validatedBody,
+  });
+
+  res.json({ settings: result });
+};
